福島Project/src/objects/JFK_ErrorLog__c.object
<CustomObject>
    <description>支給金額の計算など、処理中に発生したエラーの記録用</description>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>労働者への参照
該当する労働者が確定できない場合（事業所としての内容）は設定しない</description>
        <label>労働者</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>エラーログ</relationshipLabel>
        <relationshipName>ErrLog_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JigyosyoTR_Bosyukai__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>募集回の事業所TRへの参照</description>
        <label>事業所TR（募集回）</label>
        <referenceTo>JFK_JigyosyoTR__c</referenceTo>
        <relationshipLabel>エラーログ</relationshipLabel>
        <relationshipName>ErrLog_JigyosyoTR_Bosyukais</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JigyosyoTR_ShikyuJiki__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>支給時期の事業所TRへの参照
支給時期に関係ない場合は設定しない</description>
        <label>事業所TR（支給時期）</label>
        <referenceTo>JFK_JigyosyoTR__c</referenceTo>
        <relationshipLabel>エラーログ</relationshipLabel>
        <relationshipName>ErrLog_JigyosyoTR_ShikyuJikis</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Naiyo__c</fullName>
        <description>記録した要因の内容
主にエラーメッセージが設定される</description>
        <label>内容</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RodosyaTR__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>労働者TRへの参照
該当する労働者がいなければ設定しない</description>
        <label>労働者TR</label>
        <referenceTo>JFK_RodoSyaTR__c</referenceTo>
        <relationshipLabel>エラーログ</relationshipLabel>
        <relationshipName>ErrLog_RodosyaTRs</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>エラーログ</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <nameField>
        <displayFormat>EL-{YYYY}{MM}{DD}-{0}</displayFormat>
        <label>エラーログID</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>